This commit will add text alignments and will fix errors pointed out by Markbot
This commit will properly use the div tag, and will adjust text alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: "Lato", sans-serif;
+  font-family: Lato, sans-serif;
   line-height: 1.5;
 }
 
@@ -10,23 +10,35 @@ html {
 
 body {
   background-color: #eee9de;
+  text-align: center;
+  margin: 0;
+}
+
+div {
+  text-align: left;
 }
 
 img {
   width: 100%;
   margin: 0;
+  display: block;
 }
 
 figure {
   margin: 0;
+  padding: 2em 1em 0;
 }
 
 section {
   max-width: 25em;
   margin: 0 auto;
-  padding: 2em;
-  display: inline-block;
 
+  padding-bottom: 0;
+  display: inline-block;
+}
+
+section div {
+  padding: 0 1em;
 }
 
 a {
@@ -34,7 +46,7 @@ a {
   text-decoration: none;
   list-style-type: none;
   background-color: #eee9de;
-  border: 1px solid #000;
+  border: 3px solid #000;
   border-radius: 5px;
   padding: .5em;
   vertical-align: middle;
